# tree_menu

./: .env.example  .gitignore  Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml  setup.cfg
nginx/configs/: admin_panel.conf
src/: requirements.txt  start.sh
src/app/: admin.py  models.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_insertdata.py
src/app/templates/app/: main.html  menu.html
src/app/templatetags/: tree_menu.py
src/config/: settings.py  urls.py
src/config/components/: constants.py  database.py
src/static/css/: main.css
src/templates/: base.html
